--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.7.1",
     "react-photo-collage": "^1.0.9",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
